--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,6 +61,10 @@
     "defaultMessage": "shrey Daga's Father",
     "description": "Happy Learning Starts Here... title"
   },
+  "/3gG1X": {
+    "defaultMessage": "Achieved Badge",
+    "description": "achieved badge"
+  },
   "/Gy7qZ": {
     "defaultMessage": "Level {levelNumber}",
     "description": "Level indicator"
@@ -688,10 +692,6 @@
   "9gqH2W": {
     "defaultMessage": "Login",
     "description": "Login button"
-  },
-  "9ppS9d": {
-    "defaultMessage": "Go to Class",
-    "description": "class navigation button"
   },
   "A/XB4F": {
     "defaultMessage": "Student's Name",
@@ -1535,10 +1535,6 @@
     "defaultMessage": "More Info",
     "description": "More info button"
   },
-  "OEPiPP": {
-    "defaultMessage": "More friends = More fun",
-    "description": "More card Title"
-  },
   "OG2BxR": {
     "defaultMessage": "FREE",
     "description": "HackerKID Trial Edition Free"
@@ -1561,10 +1557,6 @@
   "OWSL0r": {
     "defaultMessage": "Register",
     "description": "Register"
-  },
-  "OXM3Ji": {
-    "defaultMessage": "View Club",
-    "description": "Club show button"
   },
   "OYOyLO": {
     "defaultMessage": "(*Excluding GST)",
@@ -1623,6 +1615,10 @@
   "PSx95N": {
     "defaultMessage": "Home",
     "description": "Home card heading"
+  },
+  "PV0XXJ": {
+    "defaultMessage": "View All Awards",
+    "description": "View awards button"
   },
   "PaprdD": {
     "defaultMessage": "No challenges published yet !",
@@ -1695,10 +1691,6 @@
   "RE7c5M": {
     "defaultMessage": "{awardName}",
     "description": "award name label"
-  },
-  "REPA3X": {
-    "defaultMessage": "Join your friends in the club",
-    "description": "More card Subtitle"
   },
   "RHM1lo": {
     "defaultMessage": "Re-type Password",
@@ -2575,10 +2567,6 @@
     "defaultMessage": "{navigationText}",
     "description": "navigational text"
   },
-  "iebFqD": {
-    "defaultMessage": "{clubName}",
-    "description": "Club card heading text"
-  },
   "iohPi0": {
     "defaultMessage": "Continue Watching",
     "description": "Continue Watching"
@@ -2641,6 +2629,10 @@
   "jromX8": {
     "defaultMessage": "reach@hackerkid.org",
     "description": "Email Button Text"
+  },
+  "jtD1T3": {
+    "defaultMessage": "View",
+    "description": "More card button text"
   },
   "jzHe4a": {
     "defaultMessage": "{timeSpent}",
@@ -2855,10 +2847,6 @@
   "nlYt8p": {
     "defaultMessage": "View more",
     "description": "View More Bottomsheet Btn"
-  },
-  "nn7wTW": {
-    "defaultMessage": "Most active members",
-    "description": "sheet card subtitle"
   },
   "nnfaF3": {
     "defaultMessage": "{selectedLanguageDisplayName}",
@@ -3296,6 +3284,10 @@
     "defaultMessage": "Create",
     "description": "create challenge button"
   },
+  "vVpBl2": {
+    "defaultMessage": "{coins} coins",
+    "description": "user coins"
+  },
   "vWe94i": {
     "defaultMessage": "More Info"
   },
@@ -3459,10 +3451,6 @@
     "defaultMessage": "{title}",
     "description": "Nav Title text"
   },
-  "yjWbPf": {
-    "defaultMessage": "Visit Club",
-    "description": "More card button text"
-  },
   "yujxGL": {
     "defaultMessage": "Your Collections and Perks",
     "description": "more menu button"
@@ -3502,10 +3490,6 @@
   "zMmp/q": {
     "defaultMessage": "Practise... or play with the new code editor",
     "description": "more card subtitle"
-  },
-  "zROcjU": {
-    "defaultMessage": "Coming soon",
-    "description": "More card button text"
   },
   "zXjEvn": {
     "defaultMessage": "sleep",
