more page club hidden for free user, dashboard page club not shown for free user, levels component levels locked, videos page locked videos and fixed the search functionality along with some UI bugs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -192,6 +192,10 @@
     "defaultMessage": "Created by {creatorName}",
     "description": "challenge creator name"
   },
+  "1R21Y0": {
+    "defaultMessage": "Unlock Now",
+    "description": "unlock now button"
+  },
   "1RUvaS": {
     "defaultMessage": "Profile Settings",
     "description": "Navigation link to profile edit page"
@@ -1157,10 +1161,6 @@
     "defaultMessage": "{pointsEarned}",
     "description": "coins"
   },
-  "I0vwZV": {
-    "defaultMessage": "Session Videos",
-    "description": "Session Videos Filter Option"
-  },
   "I1oDxa": {
     "defaultMessage": "Loading failed due to some unknown error! Please try again later.",
     "description": "Error"
@@ -1280,10 +1280,6 @@
     "defaultMessage": "{modName}",
     "description": "course Heading"
   },
-  "KcDrvG": {
-    "defaultMessage": "Solution Videos",
-    "description": "Solution Videos Filter Option"
-  },
   "KmxQM/": {
     "defaultMessage": "All Games",
     "description": "All games heading"
@@ -1311,6 +1307,10 @@
   "L5HYii": {
     "defaultMessage": "FREE",
     "description": "FREE price"
+  },
+  "L6IwvI": {
+    "defaultMessage": "Buy premium to unlock school clubs feature",
+    "description": "sheet card subtitle"
   },
   "L7Gsfw": {
     "defaultMessage": "Coding Pirate",
@@ -2457,6 +2457,10 @@
   "gCfRUT": {
     "defaultMessage": "{stateName}"
   },
+  "gE6jN3": {
+    "defaultMessage": "School Clubs",
+    "description": "More card Title"
+  },
   "gOkIvb": {
     "defaultMessage": "Name",
     "description": "Name label"
@@ -3068,6 +3072,10 @@
     "defaultMessage": "Learners Community",
     "description": "Learners Community title"
   },
+  "rxzyV1": {
+    "defaultMessage": "Upgrade to Premium to unlock this Video",
+    "description": "Upgrade to Premium to unlock this Video"
+  },
   "sC1GR3": {
     "defaultMessage": "Yes",
     "description": "yes button text"
@@ -3140,6 +3148,10 @@
     "defaultMessage": "Output will be shown here",
     "description": "output box placeholder text"
   },
+  "t7ObEx": {
+    "defaultMessage": "Unlock Now",
+    "description": "More card button text"
+  },
   "tAiFjx": {
     "defaultMessage": "Challenges",
     "description": "Games title"
@@ -3195,6 +3207,10 @@
   "u7sb8V": {
     "defaultMessage": "Indra gandhi public school",
     "description": "Modern Vidya Ketan title"
+  },
+  "uA6ep3": {
+    "defaultMessage": "Buy premium to use this feature",
+    "description": "More card Subtitle"
   },
   "uCGdYb": {
     "defaultMessage": "Club Name",
@@ -3282,10 +3298,6 @@
   "vY562d": {
     "defaultMessage": "Try the new in-built IDE",
     "description": "more card title"
-  },
-  "vYViQu": {
-    "defaultMessage": "Filter",
-    "description": "Filter"
   },
   "vf8heh": {
     "defaultMessage": "Enriching Tech Videos for You",
