profile picture fix, web redirection page added, icons changed in achievements and awards

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2276,6 +2276,9 @@
     "defaultMessage": "{name}",
     "description": "name"
   },
+  "cucSNn": {
+    "defaultMessage": "Go to hackerkid.org to finish signing up to unlock more features."
+  },
   "d/zBnH": {
     "defaultMessage": "...",
     "description": "Page"
@@ -2704,6 +2707,10 @@
   "ls4jLo": {
     "defaultMessage": "Subscription",
     "description": "more menu button"
+  },
+  "lurpFa": {
+    "defaultMessage": "You're almost there",
+    "description": "Premium title tag"
   },
   "lw8qSk": {
     "defaultMessage": "Buy Now",
