--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1249,6 +1249,10 @@
     "defaultMessage": "No Awards Found!",
     "description": "error message"
   },
+  "JnX/VF": {
+    "defaultMessage": "{noVideosMessage}",
+    "description": "no videos text"
+  },
   "JnwRMJ": {
     "defaultMessage": "OTP",
     "description": "OTP label"
