--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1205,6 +1205,9 @@
     "defaultMessage": "St. Michael's Academy",
     "description": "title"
   },
+  "IheIvZ": {
+    "defaultMessage": "Go to hackerkid.org & finish the sign up process. As a Premium Member, you'll have unlimited access to gamified coding problems, video libraries, challenges, activity awards, badges, certificates and special access to clubs."
+  },
   "IloyRB": {
     "defaultMessage": "{heading}",
     "description": "page title"
@@ -2287,9 +2290,6 @@
   "croLiZ": {
     "defaultMessage": "{name}",
     "description": "name"
-  },
-  "cucSNn": {
-    "defaultMessage": "Go to hackerkid.org to finish signing up to unlock more features."
   },
   "d/zBnH": {
     "defaultMessage": "...",
