--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -464,6 +464,10 @@
   "64+NBp": {
     "defaultMessage": "About Club"
   },
+  "64kwqI": {
+    "defaultMessage": "Almost there!",
+    "description": "Premium title tag"
+  },
   "66xp/7": {
     "defaultMessage": "{coins} coins",
     "description": "club coins"
@@ -586,6 +590,10 @@
   "7asVcm": {
     "defaultMessage": "Games",
     "description": "games page heading"
+  },
+  "7c/5xr": {
+    "defaultMessage": "hackerkid.org",
+    "description": "premium content"
   },
   "7dyAWL": {
     "defaultMessage": "No invites",
@@ -1205,9 +1213,6 @@
     "defaultMessage": "St. Michael's Academy",
     "description": "title"
   },
-  "IheIvZ": {
-    "defaultMessage": "Go to hackerkid.org & finish the sign up process. As a Premium Member, you'll have unlimited access to gamified coding problems, video libraries, challenges, activity awards, badges, certificates and special access to clubs."
-  },
   "IloyRB": {
     "defaultMessage": "{heading}",
     "description": "page title"
@@ -1467,6 +1472,10 @@
     "defaultMessage": "HackerKid is a next-generation platform that helps kids learn coding in a gamified environment through games like Turtle and Zombieland. Kids can compete with each other through challenges and create clubs to scale their learning. They would also get awards and certificates for completing challenges, thus keeping learning competitive and encouraging.",
     "description": "faq description"
   },
+  "N5Q2pH": {
+    "defaultMessage": "& finish the sign up process.",
+    "description": "premium content"
+  },
   "N930gg": {
     "defaultMessage": "{message}",
     "description": "feed message"
@@ -1683,10 +1692,6 @@
     "defaultMessage": "Profile",
     "description": "profile heading"
   },
-  "R5SEEt": {
-    "defaultMessage": "Close",
-    "description": "close button"
-  },
   "R6fRXj": {
     "defaultMessage": "View",
     "description": "more card button"
@@ -1772,6 +1777,10 @@
   "SUyZvl": {
     "defaultMessage": "Help",
     "description": "Help title"
+  },
+  "SbBhMX": {
+    "defaultMessage": "Playback speed",
+    "description": "playback speed text"
   },
   "Sbkd3U": {
     "defaultMessage": "{xp} coins",
@@ -2039,6 +2048,10 @@
   "X43FUF": {
     "defaultMessage": "Congratulations {user}, you have earned the {award} for your excellent record.",
     "description": "Award Modal Desciption"
+  },
+  "X6XVnH": {
+    "defaultMessage": "{closeBtnText}",
+    "description": "close button"
   },
   "XEOksh": {
     "defaultMessage": "Basics of JavaScript",
@@ -2731,10 +2744,6 @@
     "defaultMessage": "Subscription",
     "description": "more menu button"
   },
-  "lurpFa": {
-    "defaultMessage": "You're almost there",
-    "description": "Premium title tag"
-  },
   "lw8qSk": {
     "defaultMessage": "Buy Now",
     "description": "Buy Now btn"
@@ -2865,6 +2874,10 @@
   "nWr131": {
     "defaultMessage": "{message}",
     "description": "Status message"
+  },
+  "nXjHGd": {
+    "defaultMessage": "Go to",
+    "description": "premium content"
   },
   "nawIST": {
     "defaultMessage": "Is HackerKid free?",
@@ -3085,6 +3098,10 @@
     "defaultMessage": "{tag}",
     "description": "Course Title"
   },
+  "qwnHfF": {
+    "defaultMessage": "No Videos Found",
+    "description": "no video found"
+  },
   "qx2FMG": {
     "defaultMessage": "{type}",
     "description": "video Type"
@@ -3108,6 +3125,10 @@
   "rZKLPy": {
     "defaultMessage": "Copy Link",
     "description": "Copy Link button"
+  },
+  "rlR4g3": {
+    "defaultMessage": "As a Premium Member, you'll have unlimited access to gamified coding problems, video libraries, challenges, activity awards, badges, certificates and special access to clubs.",
+    "description": "premium content"
   },
   "roTiGY": {
     "defaultMessage": "Learners Community",
